src/system/kernel/arch/generic/debug_uart_8250.cpp
@@ -136,8 +136,13 @@ DebugUART8250::Init()
 int
 DebugUART8250::PutChar(char c)
 {
-	while (!(In8(UART_LSR) & (1<<6)));
-		// wait for the last char to get out
+	// wait for the last char to get out
+	int32 timeout = 256 * 1024;
+	while (!(In8(UART_LSR) & (1<<6))) {
+		if (--timeout == 0)
+			return -1;
+	}
+
 	Out8(UART_THR, c);
 	return 0;
 }
